test/analyze/type_check/main_function/invalid_param_types.exp
Error: Invalid type for main function. The main function takes no parameters and must return either an `Int` or `Unit`.
test/analyze/type_check/main_function/invalid_param_types.myte:5:4-8
 5 | fun main(args: Vec<Bool>) {}
   |     ^^^^