test/analyze/type_check/main_function/invalid_param_types.myte
module test

import std.vec.Vec

fun main(args: Vec<Bool>) {}